@@ -1,3 +1,6 @@
+2023-11-11  Markus Gans  <guru.mail@muenster.de>
+	* Optimized mouse string parser
+
 2023-11-03  Markus Gans  <guru.mail@muenster.de>
 	* Reorganize the data structure of widget color theme
 
